--- a/src/common/components/button/Button.module.scss
+++ b/src/common/components/button/Button.module.scss
@@ -15,3 +15,11 @@
   padding: 5px 0;
   border-radius: 10px;
 }
+
+.link,
+.secondary,
+.primary {
+  &:focus-visible {
+    box-shadow: 0 0 0 2px var(--color-error-900);
+  }
+}
