--- a/src/common/components/find/Find.module.scss
+++ b/src/common/components/find/Find.module.scss
@@ -25,4 +25,15 @@
     left: 13px;
   }
 
+  .tests {
+    position: absolute;
+    right: 15px;
+    display: flex;
+    color: var(--color-dark-300);
+
+    > span {
+      margin: 0 0 0 5px;
+    }
+  }
+
 }
